--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "mongoose": "~3.8.15",
     "morgan": "~1.3.0",
     "passport": "~0.2.1",
-    "passport-local": "~1.0.0"
+    "passport-local": "~1.0.0",
+    "socket.io": "~1.1.0",
+    "connect-mongo": "~0.4.1",
+    "cookie-parser": "~1.3.3"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
@@ -29,9 +32,14 @@
     "http-server": "^0.8.5",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.1.4",
-    "karma-firefox-launcher": "~0.1",
     "karma-jasmine": "^0.2.3",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "load-grunt-tasks": "^0.4.0",
+    "protractor": "^1.5.0",
     "should": "~4.0.4",
     "supertest": "~0.13.0"
+  },
+  "scripts": {
+    "install": "node node_modules/protractor/bin/webdriver-manager update"
   }
 }
